--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <body>
 
         <h1>Odin Recipes</h1>
+
+        <a href="recipes/ramen-noodle-soup.html">Ramen Noodle Soup</a>
+        
     </body>
 
 </html>
