--- a/recipes/ramen-noodle-soup.html
+++ b/recipes/ramen-noodle-soup.html
@@ -20,6 +20,14 @@
         <li>1 teaspoon sesame oil</li>
         <li>2 green onions, sliced</li>
     </ul>
-    
+
+    <ol>
+        <li>
+            In a medium saucepan combine broth and noodles. Cover and bring 
+            to a boil over high heat; stir to break up noodles. Reduce heat to medium.
+            add soy sauce, chili oil and ginger. Simmer, uncovered, for 10 minutes.
+            Stir in sesame oil and garnish with green onions.
+        </li>
+    </ol>
 </body>
 </html>
