--- a/recipes/ramen-noodle-soup.html
+++ b/recipes/ramen-noodle-soup.html
@@ -11,6 +11,8 @@
     <h1>Ramen Noodle Soup</h1>
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9180270.jpg&w=595&h=398&c=sc&poi=face&q=60" alt="Ramen noodle soup">
     <h3>This soup is just very very good....you can find ramen noodles at most supermarkets, or at Asian grocery stores.</h3>
+    
+    <h2>Ingredients</h2>
     <ul>
         <li>3 and a half cups vegetable broth</li>
         <li>1 (3.5 ounces) package ramen noodles with dried vegetables</li>
@@ -21,6 +23,7 @@
         <li>2 green onions, sliced</li>
     </ul>
 
+    <h2>Steps</h2>
     <ol>
         <li>
             In a medium saucepan combine broth and noodles. Cover and bring 
