--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 
         <h1>Odin Recipes</h1>
 
-        <a href="recipes/ramen-noodle-soup.html">Ramen Noodle Soup</a>
-        
+        <ul>
+            <li><a href="recipes/ramen-noodle-soup.html">Ramen Noodle Soup</a></li>
+            <li><a href="recipes/parmesan-Crusted-Shrimp-Scampi.html">Parmesan Crusted Shrimp Scampi</a></li>
+
     </body>
 
 </html>
