--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
         <h1>Odin Recipes</h1>
 
+        <img src="images/index_food.gif" alt="Good looking anime dishes">
+        
+        <h4>This is a collection of my favorite recipes!</h4>
         <ul>
             <li><a href="recipes/ramen-noodle-soup.html">Ramen Noodle Soup</a></li>
             <li><a href="recipes/parmesan-Crusted-Shrimp-Scampi.html">Parmesan Crusted Shrimp Scampi</a></li>
-
+            <li><a href="recipes/chicken-caesar-salad.html">Chicken Caesar Salad</a></li>
     </body>
 
 </html>
